# poetry-types

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  renovate.json  setup.py
.github/: renovate.json
.github/workflows/: main.yml  python-publish.yml
poetry_types/: packages_map.py  poetry_types.py
poetry_types/commands/: __init__.py  add_types.py  base.py  remove_types.py  update_types.py
tests/: README.md  conftest.py  pyproject.toml.example  test_commands.py
