[project]
name = "poetry-types"
version = "0.6.0"
authors = [{ name = "Jan Vollmer", email = "jan@vllmr.dev" }]
description = "A poetry plugin that adds/removes type stubs as dependencies like the mypy --install-types command."
license = "MIT License"
readme = "README.md"
dynamic = ["classifiers"]
requires-python = ">=3.9,<4.0"
dependencies = ["poetry>=2.0,<3.0", "packaging>=24.2", "tomlkit>=0.13.2"]
keywords = ["poetry"]
[project.urls]
Repository = "https://github.com/jvllmr/poetry-types"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
tox = ">=4.25.0"
ruff = ">=0.11.4"
poetry = ">=2.1.2"


[tool.poetry.plugins."poetry.application.plugin"]
poetry-types = "poetry_types.poetry_types:PoetryTypes"

[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist= py39, py310, py311, py312, py313

[testenv]
deps =
    pytest
commands =
    pytest

"""

[tool.ruff]
target-version = "py39"


[tool.ruff.lint]
select = ["T", "UP", "RUF"]
ignore = ["RUF012"]
