[project]
name = "poetry-types"
version = "0.6.0"
authors = [{ name = "Jan Vollmer", email = "jan@vllmr.dev" }]
description = "A poetry plugin that adds/removes type stubs as dependencies like the mypy --install-types command."
license = "MIT License"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["poetry>=2.2.1,<3.0", "packaging>=25", "tomlkit>=0.13.3"]
keywords = ["poetry", "types", "type", "plugin"]
classifiers = [
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/jvllmr/poetry-types"


[tool.poetry]
requires-poetry = ">=2.0"



[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1"
tox = ">=4.32.0"
ruff = ">=0.14.5"
poetry = ">=2.2.1"


[tool.poetry.plugins."poetry.application.plugin"]
poetry-types = "poetry_types.poetry_types:PoetryTypes"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist= py39, py310, py311, py312, py313

[testenv]
deps =
    pytest
commands =
    pytest

"""

[tool.ruff]
target-version = "py39"


[tool.ruff.lint]
select = ["T", "UP", "RUF"]
ignore = ["RUF012"]
